<resources>
    <string name="app_name">FeelsLikeMonday</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sample User</string>
    <string name="nav_header_subtitle">SampleUser@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="new_entry">New</string>
    <string name="sort_entry">Sort</string>
    <string name="filter_entry">Filter</string>
    <string name="show_map_entry">Show map</string>

    <string name="menu_home">Home</string>
    <string name="menu_following">Following</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_friends">Friends</string>

    <string name="home_second">Home Second</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_gallery_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_slideshow_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="reset">Reset</string>
    <string name="Username">Username</string>
    <string name="send">Send</string>
    <string name="title_activity_maps">Map</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up1">Sign up</string>
    <string name="login">LOGIN</string>
</resources>
