<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.feelslikemonday.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.feelslikemonday.ui.following.FollowingFragment"
        android:label="@string/menu_following"
        tools:layout="@layout/fragment_following" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.feelslikemonday.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_friends"
        android:name="com.example.feelslikemonday.ui.friends.FriendsFragment"
        android:label="@string/menu_friends"
        tools:layout="@layout/fragment_friends" />
</navigation>